<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="405dp"
        android:layout_height="746dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="403dp"
            android:layout_height="780dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="-81dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:text="@string/dodge_charger"
                android:textColor="#F80C0B0B"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.423"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.689" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:text="@string/rs_1300"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:onClick="saveNote"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.917"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintVertical_bias="0.815" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="696dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/land_rover"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="224dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.107"
                app:srcCompat="@drawable/dodge"
               />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:text="@string/rs_3000"
                android:textColor="#FCFCFC"
                android:textSize="18sp"
                android:onClick="saveNote"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.909"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.906" />

            <View
                android:id="@+id/divider"
                android:layout_width="397dp"
                android:layout_height="2dp"
                android:layout_marginBottom="616dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.833"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="397dp"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="372dp"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ford12258"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:text="@string/ford_fiesta"
                android:textColor="#F80C0B0B"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/divider3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:layout_constraintVertical_bias="0.104" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="416dp"
                android:background="#4CAF50"
                android:text="@string/rs_400"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:onClick="saveNote"
                app:layout_constraintBottom_toTopOf="@+id/divider3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.946"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.651" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bentley"
                />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginBottom="108dp"
                android:text="@string/bentley_continental"
                android:textColor="#F80C0B0B"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.857"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.107" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.787"
                app:srcCompat="@drawable/bmw"
               />

            <View
                android:id="@+id/divider3"
                android:layout_width="401dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:text="@string/bmw_x3"
                android:textColor="#F80C0B0B"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/divider5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.346"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.58" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:text="@string/rs_800"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:onClick="saveNote"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.946"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                app:layout_constraintVertical_bias="0.385" />

            <View
                android:id="@+id/divider5"
                android:layout_width="401dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:text="@string/range_rover_evoque"
                android:textColor="#F80C0B0B"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.423"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/divider5"
                app:layout_constraintVertical_bias="0.11" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:text="@string/rs_1500"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:onClick="saveNote"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.909"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.454" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>